feat: introduce product management with database seeding and dedicated UI components for product forms and lists.

--- a/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.html
+++ b/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.html
@@ -14,11 +14,11 @@
           <ion-select-option value="ROPA">Ropa y Accesorios</ion-select-option>
           }
           @if (isModuleActive('alimentos')) {
-          <ion-select-option value="ALIMENTO">Alimentos y
+          <ion-select-option value="ALIMENTOS">Alimentos y
             Perecederos</ion-select-option>
           }
           @if (isModuleActive('servicios')) {
-          <ion-select-option value="SERVICIO">Servicios</ion-select-option>
+          <ion-select-option value="SERVICIOS">Servicios</ion-select-option>
           }
           @if (isModuleActive('farmacia')) {
           <ion-select-option value="FARMACIA">Farmacia</ion-select-option>
