--- a/frontend-app/src/app/pages/home/components/caja/components/transaction-modal/transaction-modal.component.scss
+++ b/frontend-app/src/app/pages/home/components/caja/components/transaction-modal/transaction-modal.component.scss
@@ -6,6 +6,8 @@
 
 .modal-wrapper {
   padding: 24px;
+  padding-top: calc(24px + env(safe-area-inset-top));
+  padding-bottom: calc(24px + env(safe-area-inset-bottom));
   height: auto;
   display: flex;
   flex-direction: column;
@@ -13,6 +15,7 @@
 
 .modal-header {
   margin-bottom: 24px;
+
   h2 {
     margin: 0;
     font-size: 22px;
@@ -57,14 +60,15 @@
 
     &.selected {
       background: #eef2ff; // Light indigo
-      
+
       .radio-circle {
         border-color: var(--ion-color-primary);
+
         &::after {
           transform: scale(1);
         }
       }
-      
+
       .option-info h4 {
         color: var(--ion-color-primary);
       }
@@ -95,21 +99,21 @@
 
     .option-info {
       flex: 1;
-      
+
       h4 {
         margin: 0 0 2px 0;
         font-size: 15px;
         font-weight: 600;
         color: #333;
       }
-      
+
       p {
         margin: 0;
         font-size: 12px;
         color: #777;
       }
     }
-    
+
     ion-icon {
       color: #999;
       font-size: 20px;
@@ -121,7 +125,7 @@
   --padding-start: 0;
   --inner-padding-end: 0;
   --highlight-color-focused: var(--ion-color-primary);
-  
+
   ion-input {
     --padding-start: 0;
     font-size: 16px;
