--- a/frontend-app/src/app/pages/home/components/configuracion/components/manual-usuario/manual-usuario.component.scss
+++ b/frontend-app/src/app/pages/home/components/configuracion/components/manual-usuario/manual-usuario.component.scss
@@ -9,7 +9,7 @@
     .header-content {
       text-align: center;
       margin-bottom: 24px;
-      padding-top: 20px;
+      padding-top: calc(20px + env(safe-area-inset-top));
 
       .main-title {
         font-size: 28px;
